fix: overflow hidden on fauxtable rows in rankstab

--- a/src/app/components/Pages/Profile/ranks/rankstab.scss
+++ b/src/app/components/Pages/Profile/ranks/rankstab.scss
@@ -41,7 +41,7 @@
             padding: ($l*1.5) ($l*2);
         }
         .fauxtable-row{
-
+            overflow: hidden;
             &:hover {
                 background: $trans-low;
             }
